--- a/admin/package.json
+++ b/admin/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "ant-design-vue": "^4.0.2",
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -24,6 +28,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.3.2"
   }
 }
